# gluezilla

./: .gitignore  LICENSE  README.md
compiler/: README.md  build.sh  linker_script.ld
compiler/llvm-11.1.0.src/: .gitignore  CMakeLists.txt
compiler/llvm-11.1.0.src/include/llvm/: DBLCLIArgs.h  InitializePasses.h  LinkAllPasses.h
compiler/llvm-11.1.0.src/lib/: CMakeLists.txt  LLVMBuild.txt
compiler/llvm-11.1.0.src/lib/CodeGen/: CMakeLists.txt  CodeGen.cpp  DBL.cpp  LLVMBuild.txt  TargetLoweringObjectFileImpl.cpp
compiler/llvm-11.1.0.src/lib/DBLCLIArgs/: CMakeLists.txt  DBLCLIArgs.cpp  LLVMBuild.txt
compiler/llvm-11.1.0.src/lib/MC/: CMakeLists.txt  ELFObjectWriter.cpp  (+6 more)
docs/: example_attack_config.toml  example_dram_config.toml  example_dram_info.toml  example_target_offsets.toml  example_templater_config.toml  example_victim_addresses.txt
loader/: Cargo.toml  README.md
loader/src/: lib.rs
rowhammer_tools/: Cargo.toml  build.rs
rowhammer_tools/src/lib/: allocation.rs  config.rs  flip_checks.rs  hammer.rs  lib.rs  mem_init.rs
rowhammer_tools/src/lib/utils/: devmem.rs  dram.rs  files.rs  garbage.rs  host.rs  mod.rs  proc.rs  serialize.rs
rowhammer_tools/src/prehammer/: main.rs
rowhammer_tools/src/templater/: main.rs
scripts/: db2victim_addresses.py  generate_attack_config.py  generate_random_target_offsets.py  json2victim_addresses.py  query.sql  toggle_segment_type.py
test_code/SPEC2017/config/: test1.cfg
test_code/coreutils/: README.txt  cp.patch  ls.patch  target_offsets.toml
test_code/small_tests/: target_offsets.toml  test5.c  test7.c
(+13 files in other folders)
