[package]
name = "rowhammer"
version = "0.1.0"
authors = ["Ruben Mechelinck <ruben.mechelinck@kuleuven.be>"]
edition = "2018"

[build-dependencies]
cc = "1.0"
bindgen = "0.65.1"

[dependencies]
ctrlc = "3.2.1"
nix = "0.22.1"
log = "0.4.14"
env_logger = "0.8.3"
mmap = { path = "external/rust-mmap" }
libloading = "0.7.0"
byteorder = "1.4.3"
elf = "0.0.10"
toml = "0.5.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.79"
serde_with = "3.2.0"
libc = "0.2.95"
hostname = "0.3.1"
colored = "2.0.0"
rand = "0.8.5"
dynasmrt = "1.2.3"
chrono = "0.4.23"
regex = "1.7.1"
sscanf = "0.4.1"
capstone = "0.11.0"

[lib]
crate-type = ["rlib"]
path = "src/lib/lib.rs"

[[bin]]
name = "templater"
path = "src/templater/main.rs"

[[bin]]
name = "prehammer"
path = "src/prehammer/main.rs"
